--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.13",
     "@types/react-native-vector-icons": "^6.4.18",
+    "expo": "^53.0.19",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.0.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
@@ -29,7 +31,7 @@
     "@react-native/eslint-config": "0.78.0",
     "@react-native/metro-config": "0.78.0",
     "@react-native/typescript-config": "0.78.0",
-    "@react-navigation/stack": "^6.3.21",
+    "@react-navigation/stack": "^7.0.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
